--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Dhrub Tara | Home</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .carousel-inner img {
+            height: 500px;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -51,13 +58,40 @@
             </div>
         </div>
 
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="home_1.jpeg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="home_2.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="home_3.jpeg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="home_4.jpeg" alt="Fourth slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <br>
+        
         <section class="mb-5 text-center">
             <section class="bg-dark-1 text-white py-3 text-center rounded mb-5">
                 <h3>About Us</h3>
             </section>
             <div class="row">
                 <div class="col-md-4 mb-3">
-                    <img src="Images/pic.jpeg" alt="Dhurb_tara" class="img-fluid rounded">
+                    <img src="pic.jpeg" alt="Dhurb_tara" class="img-fluid rounded">
                 </div>
                 <div class="col-md-8">
                     <h4>President</h4>
@@ -104,3 +138,4 @@
 </body>
 
 </html>
+
